Update homepage to change the consideration of public url during the build.

--- a/package.json
+++ b/package.json
@@ -27,5 +27,5 @@
   "bugs": {
     "url": "https://github.com/iAvinashVarma/VehicleManagementSystem/issues"
   },
-  "homepage": "https://github.com/iAvinashVarma/VehicleManagementSystem#readme"
+  "homepage": "https://vehiclemanagementsystemclient.azurewebsites.net/"
 }
