Udpdate Driver Messenger and Vehicle Monitor view.

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,6 @@
-REACT_APP_VMS_API_URL=https://vehiclemanagementsystemapi.azurewebsites.net/
+REACT_APP_ENVIRONMENT=production
+REACT_APP_VMS_HOST=https://vehiclemanagementsystemapi.azurewebsites.net/
+REACT_APP_VMS_DRIVERS_API_URL=api/driver
+REACT_APP_VMS_VEHICLES_API_URL=api/vehicle
+REACT_APP_VMS_VEHICLEMONITORS_API_URL=api/vehicleMonitor
+REACT_APP_VMS_DRIVERMESSENGERS_API_URL=api/driverMessenger
