--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.13.1",
+    "@material-ui/core": "^4.9.9",
+    "@material-ui/icons": "^4.9.1",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "classnames": "^2.2.6",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
     "react-mdl": "^1.11.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,12 +25,13 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/iAvinashVarma/VehicleManagementClient.git"
+    "url": "git+https://github.com/iAvinashVarma/VehicleManagementSystem.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/iAvinashVarma/VehicleManagementClient/issues"
+    "url": "https://github.com/iAvinashVarma/VehicleManagementSystem/issues"
   },
-  "homepage": "https://vehiclemanagementsystemclient.azurewebsites.net/"
+  "homepage": "https://vehiclemanagementsystemclient.azurewebsites.net/",
+  "proxy": "https://vehiclemanagementsystemapi.azurewebsites.net"
 }
