Add delete process for driver view.

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 REACT_APP_ENVIRONMENT=dev
-REACT_APP_VMS_HOST=https://vehiclemanagementsystemapi.azurewebsites.net/
+REACT_APP_VMS_HOST=https://localhost:44326/
 REACT_APP_VMS_DRIVERS_API_URL=api/driver
 REACT_APP_VMS_VEHICLES_API_URL=api/vehicle
 REACT_APP_VMS_VEHICLEMONITORS_API_URL=api/vehicleMonitor
